<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PSXLittle</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_debug">Debug</string>
    <string name="action_mainte">Maintenance</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="lblTrace">Show TraceFile</string>
    <string name="lblDebug">Show DebugLog</string>
    <string name="strnone2">no Strings</string>
    <string name="lblDescription">icon</string>
    <string name="strLoading">Loading</string>
    <string name="lblSQL">SQL</string>
    <string name="strDontExec">Not Executable</string>
    <string name="strNoData">No Data Found</string>
    <string name="strInterval">Interval</string>
    <string name="str10">10min</string>
    <string name="str15">15min</string>
    <string name="str20">20min</string>
    <string name="strLength">How Long?</string>
    <string name="strlen12">12hrs</string>
    <string name="strlen24">24hrs</string>
    <string name="strlen48">48hrs</string>
	<string name="strCount">Toast Count</string>
    <string name="strInfo">InfoTable</string>
    <string name="strPrev">PrevTable</string>
    <string name="strBatt">BattTable</string>
    <string name="strExport">Export Data</string>
    <string name="strImport">Import Data</string>
    <string name="ttlCPU">CPU info</string>
    <string name="ttlMEM">Memory info</string>
    <string name="ttlBATT">Battery info</string>
	<string name="strTap">Tap to choose a file</string>
	<string name="msgImport">Imported count is </string>
    <string name="msgExport">Exported to </string>
    <string name="msgNotFound">File not Found</string>
    <string name="ttlRate">Rate(%)</string>
    <string name="ttlTime">Time</string>
    <string name="strChoose">Choose File</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="strPath">Current Path</string>
    <string name="fileHeader">Header Error at </string>
    <string name="fileFormat">Format Error at </string>
    
    
</resources>