<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_reload"/>
    
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_debug"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_debug" />
    
    <!-- item
        android:id="@+id/action_mainte"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_mainte" /-->
    
    
</menu>